plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'capstone'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    asciidoctorExt
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
    set('restDocsCopyFrom', file("build/docs/asciidoc/index.html"))
    set('restDocsCopyIntoBuild', file("build/resources/main/static/docs"))
    set('restDocsCopyIntoLocal', file("src/main/resources/static/docs"))
}

dependencies {
    //spring
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //jwt
    implementation 'io.jsonwebtoken:jjwt:0.12.5'

    //mac환경에서 실행을 위한 의존성 추가
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //database
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'

    //test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'io.rest-assured:rest-assured'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    configurations 'asciidoctorExt'
    sources {
        include("**/index.adoc")
    }
    baseDirFollowsSourceFile()
    dependsOn test
}

asciidoctor.doFirst {
    delete file(restDocsCopyFrom)
}

task copyDocument(type: Copy) {
    dependsOn asciidoctor
    from file(restDocsCopyFrom)
    into file(restDocsCopyIntoLocal)
    into file(restDocsCopyIntoBuild)
}

tasks.named('resolveMainClassName') {
    inputs.files(tasks.named('copyDocument'))
}

jar.dependsOn('copyDocument')

bootJar.dependsOn('copyDocument')
